--- a/NUOPCTrace/.project
+++ b/NUOPCTrace/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>NUOPCTrace2</name>
+	<name>NUOPCTrace</name>
 	<comment></comment>
 	<projects>
 	</projects>
